# bevy_rtc

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
bevy-rtc/: Cargo.toml
bevy-rtc-macros/: Cargo.toml
bevy-rtc/src/: events.rs  latency.rs  lib.rs  protocol.rs
bevy-rtc/src/client/: mod.rs  plugin.rs  system_params.rs  systems.rs
bevy-rtc/src/client/router/: mod.rs  receive.rs  send.rs
bevy-rtc/src/server/: events.rs  mod.rs  plugin.rs  state.rs  system_params.rs  systems.rs
bevy-rtc/src/server/router/: mod.rs  receive.rs
bevy-silk/: Cargo.toml
bevy-silk-macros/: Cargo.toml
bevy-silk-macros/src/: payload.rs
bevy-silk/src/: common_plugin.rs  events.rs  latency.rs  lib.rs  main.rs  protocol.rs  schedule.rs  sets.rs  socket.rs  system_param.rs
bevy-silk/src/client/: events.rs  mod.rs  plugin.rs  state.rs  system_params.rs  systems.rs
bevy-silk/src/client/router/: mod.rs  receive.rs  send.rs
bevy-silk/src/packets/: auth.rs
bevy-silk/src/server/: events.rs  mod.rs  plugin.rs  signaler.rs  state.rs  system_params.rs  systems.rs
bevy-silk/src/server/router/: mod.rs  receive.rs  send.rs
bevy_rtc/: Cargo.toml
bevy_rtc/src/: latency.rs  lib.rs  protocol.rs  socket.rs  transport_encoding.rs
bevy_rtc/src/client/: client.rs  events.rs  mod.rs  plugin.rs  state.rs  system_params.rs  systems.rs
bevy_rtc/src/client/router/: mod.rs  receive.rs  send.rs
bevy_rtc/src/server/: client.rs  mod.rs  plugin.rs  state.rs  system_params.rs  systems.rs
bevy_rtc/src/server/router/: mod.rs  receive.rs  send.rs
bevy_rtc_macros/: Cargo.toml
bevy_rtc_macros/src/: payload.rs  protocol.rs
crates/silk-client/: Cargo.toml
crates/silk-client/src/: lib.rs  state.rs  systems.rs
crates/silk-client/src/router/: mod.rs  receive.rs  send.rs
crates/silk-common/: Cargo.toml
crates/silk-common/src/: lib.rs  schedule.rs  sets.rs  socket.rs
crates/silk-common/src/packets/: auth.rs
crates/silk-macros/: Cargo.toml
crates/silk-macros/src/: payload.rs
crates/silk-net/: Cargo.toml
crates/silk-net/src/: lib.rs
crates/silk-server/: Cargo.toml
crates/silk-server/src/: lib.rs  signaler.rs  state.rs  system_params.rs  systems.rs
crates/silk-server/src/router/: receive.rs  send.rs
demo/client/: Cargo.toml
demo/client/src/: chat.rs  main.rs  painting.rs
demo/net-common/: Cargo.toml
demo/net-common/src/: lib.rs
demo/protocol/: Cargo.toml
demo/protocol/src/: lib.rs
demo/server/: Cargo.toml
demo/server/src/: main.rs
demos/painting-client/: Cargo.toml
demos/painting-client/src/: main.rs
demos/painting-server/: Cargo.toml
demos/painting-server/src/: main.rs
demos/painting_client/: Cargo.toml
demos/painting_client/src/: main.rs  painting.rs
demos/painting_server/: Cargo.toml
demos/painting_server/src/: main.rs
demos/ping-client/: Cargo.toml
demos/ping-client/src/: main.rs
demos/ping-server/: Cargo.toml
demos/ping-server/src/: main.rs
demos/ping_client/: Cargo.toml
demos/ping_client/src/: main.rs
demos/ping_server/: Cargo.toml
demos/ping_server/src/: main.rs
demos/protocol/: Cargo.toml
demos/protocol/src/: lib.rs
silk/: Cargo.toml
silk-client/: Cargo.toml
silk-client/examples/: bevy.rs  chat_client.rs  client.rs  painting_client.rs
silk-client/src/: events.rs  lib.rs  main.rs  schedule.rs  state.rs  system_params.rs  systems.rs
silk-client/src/router/: mod.rs  receive.rs  send.rs
silk-common/: Cargo.toml
silk-common/src/: demo_packets.rs  events.rs  lib.rs  packets.rs  sets.rs  socket.rs  stage.rs
silk-common/src/network_queries/: message.rs  mod.rs  query.rs  receive.rs
silk-common/src/packets/: auth.rs  mod.rs
silk-common/src/router/: message.rs  mod.rs  receive.rs  send.rs  system_params.rs
silk-macros/: Cargo.toml
silk-macros/src/: packet.rs  payload.rs
silk-net/: Cargo.toml
silk-net/src/: lib.rs
silk-server/: Cargo.toml
silk-server/examples/: bevy.rs  chat_server.rs  painting_server.rs  server.rs  simple.rs
silk-server/src/: events.rs  glue.rs  lib.rs  main.rs  schedule.rs  signaler.rs  signaling.rs  stages.rs  state.rs  system_params.rs  systems.rs
silk-server/src/router/: mod.rs  receive.rs  send.rs
silk-signaler/: Cargo.toml
silk-signaler/src/: main.rs
silk-signaller/: Cargo.toml
silk-signaller/src/: glue.rs  main.rs  signaling.rs  state.rs
src/: lib.rs
