[workspace]
members = ["bevy-rtc", "bevy-rtc-macros", "demos/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.9.0"
license = "MIT OR Apache-2.0"
description = "A client-server library designed over WebRTC for Bevy"
repository = "https://github.com/vectorgameexperts/bevy-rtc"
authors = ["Spencer C. Imbleau"]
keywords = ["bevy", "webrtc", "networking", "wasm"]
categories = [
  "network-programming",
  "game-development",
  "wasm",
  "web-programming",
]

[workspace.dependencies]
bevy = { version = "0.13", default-features = false }
# FIXME: Change to 0.9 after https://github.com/johanhelsing/matchbox/pull/424
bevy_matchbox = { git = "https://github.com/johanhelsing/matchbox", branch = "bevy-0.13" }
