[workspace]
members = ["bevy_rtc", "bevy_rtc_macros", "demos/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "A client-server library designed over WebRTC for Bevy"
repository = "https://github.com/loopystudios/bevy_rtc"
authors = ["Spencer C. Imbleau"]
keywords = ["bevy", "webrtc", "networking", "wasm"]
categories = [
  "network-programming",
  "game-development",
  "wasm",
  "web-programming",
]

[workspace.dependencies]
bevy = { version = "0.13", default-features = false }
bevy_matchbox = "0.9.0"
