[package]
name = "bevy-rtc"
version.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true # document all features

[dependencies]
bevy = { workspace = true }
bevy-rtc-macros = { path = "../bevy-rtc-macros" }
bevy_matchbox = { workspace = true }
serde = "1"
instant = "0.1"
enum-display = "0.1"
# Default encoding
serde_json = { version = "1", optional = true }
# Binary encoding (`binary` feature)
bincode = { version = "1", optional = true }

[features]
default = ["dep:serde_json"]
client = []
server = ["bevy_matchbox/signaling"]
binary = ["dep:bincode"]
