[package]
name = "bevy-silk-macros"
version.workspace = true
license.workspace = true
edition.workspace = true

[lib]
proc-macro = true
name = "proc_macro_payload"
path = "src/payload.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
syn = "2.0"
quote = "1.0"
