[package]
name = "bevy-silk"
description = "A client-server library designed over WebRTC for Bevy"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true }
silk-macros = { path = "../crates/silk-macros" }
bevy_matchbox = { workspace = true }

log = "0.4"
serde = "1"
serde_json = { version = "1", optional = true }
bincode = { version = "1", optional = true }
strum = "0.25"
strum_macros = "0.25"


[features]
default = ["client", "server", "dep:serde_json"]
client = []
server = ["bevy_matchbox/signaling"]
binary = ["dep:bincode"]
