[package]
name = "bevy_rtc"
version.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true # document all features
rustdoc-args = [
  "--cfg",
  "docsrs",
] # defines the configuration attribute `docsrs`

[dependencies]
bevy = { workspace = true }
bevy_rtc_macros = { path = "../bevy_rtc_macros" }
bevy_matchbox = { workspace = true }
serde = "1.0.197"
instant = "0.1.12"
enum-display = "0.1.4"
serde_json = "1.0.115"
# Binary encoding (`binary` feature)
bincode = { version = "1.3.3", optional = true }

[features]
default = ["binary"]
client = []
server = ["bevy_matchbox/signaling"]
binary = ["dep:bincode"]
