[package]
name = "bevy_rtc_macros"
version.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lib]
proc-macro = true
name = "proc_macro_protocol"
path = "src/protocol.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
syn = "2.0"
quote = "1.0"
