[package]
name = "silk-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "game"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true }
matchbox_socket = { workspace = true }
silk-common = { path = "../silk-common" }

[dev-dependencies]
bevy_egui = "0.19.0"
futures-timer = { version = "3", features = ["wasm-bindgen"] }
log = { version = "0.4", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
futures = { version = "0.3", default-features = false }
wasm-bindgen-futures = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
futures = "0.3"
tokio = "1.12"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }