[package]
name = "silk-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
silk-common = { path = "../silk-common" }
silk-net = { path = "../silk-net" }

[dev-dependencies]
bevy_egui = "0.21"
futures-timer = { version = "3", features = ["wasm-bindgen"] }
log = { version = "0.4", default-features = false }
