[package]
name = "silk-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"
serde = "1.0"
bincode = "1.3"
log = { version = "0.4", default-features = false }
matchbox_socket = { workspace = true }

[dev-dependencies]
futures-timer = { version = "3", features = ["wasm-bindgen"] }
log = { version = "0.4", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
futures = { version = "0.3", default-features = false }
wasm-bindgen-futures = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
futures = "0.3"
tokio = "1.12"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
