[package]
name = "silk-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
silk-net = { path = "../silk-net" }
silk-macros = { path = "../silk-macros" }
bevy_matchbox = { workspace = true }
anyhow = "1.0"
serde = "1.0"
bincode = "1.3"
log = { version = "0.4", default-features = false }
bevy = { workspace = true }
strum = "0.25"
strum_macros = "0.25"
