[package]
name = "silk-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
name = "proc_macro_packet"
path = "src/packet.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
silk-common = { path = "../silk-common" }
syn = "2.0"
quote = "1.0"
