[package]
name = "silk-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
name = "proc_macro_payload"
path = "src/payload.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
silk-net = { path = "../silk-net" }
syn = "2.0"
quote = "1.0"
