[package]
name = "silk-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy_matchbox = { workspace = true }
log = "0.4"
serde = "1.0"
bincode = { version = "1.3", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
json = ["dep:serde_json"]
bincode = ["dep:bincode"]
