[package]
name = "silk-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { workspace = true }
matchbox_socket = { workspace = true }
silk-common = { path = "../silk-common" }
anyhow = { workspace = true }

futures-timer = { version = "3", features = ["wasm-bindgen"] }
log = { version = "0.4", default-features = false }
bincode = "1.3.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
futures = { version = "0.3", default-features = false }
wasm-bindgen-futures = "0.4.29"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = "0.3"
tokio = "1.12"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
