[package]
name = "silk-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { workspace = true }
bevy_matchbox = { workspace = true }
silk-common = { path = "../silk-common" }
anyhow = { workspace = true }

futures-timer = { version = "3", features = ["wasm-bindgen"] }
log = { version = "0.4", default-features = false }
bincode = "1.3.3"
