[package]
name = "silk-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { workspace = true }
matchbox_signaling = { workspace = true }
silk-common = { path = "../silk-common" }
silk-net = { path = "../silk-net" }
anyhow = { workspace = true }
async-compat = "0.2"

futures-timer = { version = "3", features = ["wasm-bindgen"] }
log = { version = "0.4", default-features = false }
bincode = "1.3.3"
serde = "1.0"
