[package]
name = "silk-signaler"
version = "0.1.0"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { workspace = true }
silk-common = { path = "../silk-common" }
matchbox_signaling = { workspace = true }
async-compat = "0.2"
