[package]
name = "silk-client"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true }
silk-common = { path = "../silk-common" }
silk-net = { path = "../silk-net" }

[dev-dependencies]
bevy = "0.11"
bevy_egui = "0.21"
futures-timer = { version = "3", features = ["wasm-bindgen"] }
log = { version = "0.4", default-features = false }
