[package]
name = "silk-common"
version.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
silk-net = { path = "../silk-net" }
silk-macros = { path = "../silk-macros" }
bevy_matchbox = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
log = { version = "0.4", default-features = false }
bevy = { workspace = true }
strum = "0.25"
strum_macros = "0.25"
