[package]
name = "silk-net"
version.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy_matchbox = { workspace = true }
log = "0.4"
serde = { workspace = true }
bincode = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = ["dep:serde_json"]
binary = ["dep:bincode"]
