[package]
name = "silk-server"
version.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { workspace = true }
matchbox_signaling = { workspace = true }
silk-common = { path = "../silk-common" }
silk-net = { path = "../silk-net" }
anyhow = { workspace = true }
async-compat = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
futures-timer = { version = "3", features = ["wasm-bindgen"] }
log = { version = "0.4", default-features = false }
