[package]
name = "demo-client"
version.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[dependencies]
silk = { path = "../..", features = ["client"] }
net-common = { path = "../net-common" }
bevy = { workspace = true, default-features = true }
bevy_egui = "0.21"
futures-timer = { version = "3", features = ["wasm-bindgen"] }
log = { version = "0.4", default-features = false }
