[package]
name = "demo-server"
version.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[dependencies]
silk = { path = "../..", features = ["server"] }
net-common = { path = "../net-common" }
bevy = { workspace = true }
bevy_egui = "0.21"
futures-timer = { version = "3", features = ["wasm-bindgen"] }
log = { version = "0.4", default-features = false }
