[package]
name = "painting-client"
version.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[dependencies]
bevy = { workspace = true, default-features = true }
bevy-rtc = { path = "../../bevy-rtc", features = ["client"] }
protocol = { path = "../protocol" }
bevy_egui = "0.25"
log = { version = "0.4", default-features = false }
