[package]
name = "painting-client"
version.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[dependencies]
bevy = { workspace = true, default-features = true }
bevy_rtc = { path = "../../bevy_rtc", features = ["client"] }
protocol = { path = "../protocol" }
bevy_egui = "0.26"
log = { version = "0.4", default-features = false }

## FIXME: Remove this after https://github.com/bevyengine/bevy/issues/11052
instant = { version = "0.1", features = ["wasm-bindgen"] }
